0024817: Can not sew two circular faces in non-manifold mode

IndRef parameter usage fixed. Obsolete code deleted.
Test case for issue CR24817